<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<artifactId>console-parent</artifactId>
		<groupId>org.bonitasoft.console</groupId>
		<version>6.2.4-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>console-war</artifactId>
	<name>console war</name>
	<packaging>war</packaging>

	<properties>
		<permutations>All</permutations>

		<!-- filtered in web.xml -->
		<enable.engine.http.api.start>&lt;!--</enable.engine.http.api.start>
		<enable.engine.http.api.end>--&gt;</enable.engine.http.api.end>
		<enable.engine.listener.start>&lt;!--</enable.engine.listener.start>
		<enable.engine.listener.end>--&gt;</enable.engine.listener.end>
	</properties>

	<dependencies>
		<!-- Compile dependency -->
		<dependency>
			<groupId>org.bonitasoft.forms</groupId>
			<artifactId>forms-view</artifactId>
			<version>${project.version}</version>
		</dependency>

		<!-- GWT dependency (sources) -->
		<dependency>
			<groupId>org.bonitasoft.web.toolkit</groupId>
			<artifactId>toolkit-view</artifactId>
			<classifier>sources</classifier>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bonitasoft.forms</groupId>
			<artifactId>forms-view</artifactId>
			<classifier>sources</classifier>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bonitasoft.forms</groupId>
			<artifactId>forms-rpc</artifactId>
			<classifier>sources</classifier>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bonitasoft.forms</groupId>
			<artifactId>forms-model</artifactId>
			<version>${project.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bonitasoft.web</groupId>
			<artifactId>bonita-rest-model</artifactId>
			<classifier>sources</classifier>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Runtime dependencies -->
		<dependency>
			<groupId>org.bonitasoft.console</groupId>
			<artifactId>console-server</artifactId>
			<version>${project.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.bonitasoft.forms</groupId>
			<artifactId>forms-server</artifactId>
			<version>${project.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- GWT deps -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<scope>provided</scope>
		</dependency>
 		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
 		</dependency>
	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<!-- War configuration -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<packagingExcludes>
						.gwt-tmp/**,
						WEB-INF/deploy/**,
						%regex[WEB-INF/classes/(?!html).*]
					</packagingExcludes>
					<webResources>
						<resource>
							<filtering>true</filtering>
							<targetPath>WEB-INF</targetPath>
							<directory>src/main/resources</directory>
							<includes>
								<include>web.xml</include>
							</includes>
						</resource>
					</webResources>
					<attachClasses>true</attachClasses>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<id>create-version-file</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<mkdir
									dir="${project.build.directory}/${project.artifactId}-${project.version}" />
								<echo
									file="${project.build.directory}/${project.artifactId}-${project.version}/VERSION"
									append="false">version : ${project.version}</echo>
							</tasks>
						</configuration>
					</execution>
					<execution>
						<id>copy-html-resources</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<copy
									tofile="${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes/html/bonita_page_default.html"
									file="${project.build.directory}/forms-design/html/page.html" />
								<copy
									tofile="${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes/html/bonita_process_default.html"
									file="${project.build.directory}/forms-design/html/process.html" />
								<copy
									tofile="${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes/html/bonita_default_error.html"
									file="${project.build.directory}/forms-design/html/error.html" />
								<copy
									tofile="${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes/html/bonita_default_confirm.html"
									file="${project.build.directory}/forms-design/html/confirm.html" />
								<!-- copy htc files for IE compatibility -->
								<copy
									tofile="${project.build.directory}/${project.artifactId}-${project.version}/css/PIE.htc"
									file="../../toolkit/toolkit-looknfeel/src/main/less/tools/PIE.htc" />
								<copy
									tofile="${project.build.directory}/${project.artifactId}-${project.version}/css/boxsizing.htc"
									file="../../toolkit/toolkit-looknfeel/src/main/less/tools/boxsizing.htc" />
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<!-- GWT configuration -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<localWorkers>2</localWorkers>
					<disableCastChecking>true</disableCastChecking>
					<disableClassMetadata>true</disableClassMetadata>
					<module>org.bonitasoft.console.${permutations}BonitaConsole</module>
					<compileTargets>
						<value>org.bonitasoft.console.${permutations}BonitaConsole</value>
					</compileTargets>
					<runTarget>org.bonitasoft.console.${permutations}BonitaConsole</runTarget>
					<logLevel>INFO</logLevel>
					<compileReport>false</compileReport>
					<noServer>false</noServer>
					<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
					<!-- this parameter is VERY important with automatic mode - has to match 
						the version in your declared deps if this does not match (default if left 
						out is 1.5.3) you will have mysterious errors -->
					<gwtVersion>${gwtVersion}</gwtVersion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>unpack-forms-design</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.bonitasoft.forms</groupId>
									<artifactId>forms-design</artifactId>
									<version>${project.version}</version>
									<type>zip</type>
									<overWrite>true</overWrite>
									<outputDirectory>${project.build.directory}/forms-design</outputDirectory>
									<includes>html/</includes>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>replace-css-url-in-jsp</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<inherited>false</inherited>
						<configuration>
							<ignoreDirFormatExtensions>true</ignoreDirFormatExtensions>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>assembly.xml</descriptor>
							</descriptors>
							<tarLongFileMode>gnu</tarLongFileMode>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>dev</id>
			<dependencies>
				<dependency>
					<groupId>org.bonitasoft.engine</groupId>
					<artifactId>bonita-server</artifactId>
				</dependency>

				<!-- GWT tools -->
				<dependency>
					<!-- only used by debugger -->
					<groupId>org.bonitasoft.web.tooling</groupId>
					<artifactId>bonita-gwt-tools</artifactId>
					<!-- version of gwt-tools is the same as gwt -->
					<version>${gwt.version}</version>
					<scope>runtime</scope>
				</dependency>

				<!-- DATASOURCE JNDI -->
				<dependency>
					<groupId>commons-dbcp</groupId>
					<artifactId>commons-dbcp</artifactId>
					<version>1.4</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-naming</artifactId>
					<version>6.1.26</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.mortbay.jetty</groupId>
					<artifactId>jetty-plus</artifactId>
					<version>6.1.26</version>
					<scope>runtime</scope>
				</dependency>

				<!-- DATASOURCE JTA -->
				<dependency>
					<groupId>org.codehaus.btm</groupId>
					<artifactId>btm</artifactId>
					<version>2.1.3</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>javax.transaction</groupId>
					<artifactId>jta</artifactId>
					<version>1.1</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.codehaus.btm</groupId>
					<artifactId>btm-jetty6-lifecycle</artifactId>
					<version>2.0.1</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
					<version>1.6.0</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<version>1.6.0</version>
					<scope>runtime</scope>
				</dependency>
				<dependency>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
					<version>1.2.15</version>
					<scope>runtime</scope>
					<exclusions>
						<exclusion>
							<groupId>com.sun.jmx</groupId>
							<artifactId>jmxri</artifactId>
						</exclusion>
						<exclusion>
							<groupId>com.sun.jdmk</groupId>
							<artifactId>jmxtools</artifactId>
						</exclusion>
						<exclusion>
							<groupId>javax.jms</groupId>
							<artifactId>jms</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>com.h2database</groupId>
					<artifactId>h2</artifactId>
					<version>1.3.170</version>
				</dependency>
			</dependencies>

			<properties>
				<bonita.home>../../bonita-home/target/bonita-home-${project.version}/bonita</bonita.home>
				<bonita.home.ref>../../bonita-home/target/bonita-home-${project.version}/bonita</bonita.home.ref>
				<bonita.css>portal/css/bonita.css</bonita.css>
				<!-- filtered in web.xml -->
				<enable.engine.listener.start />
				<enable.engine.listener.end />
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<!-- Portal themes (engine needs them in the classpath) -->
							<execution>
								<id>copy-looknfeel</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.bonitasoft.web.toolkit</groupId>
											<artifactId>toolkit-looknfeel</artifactId>
											<version>${project.version}</version>
											<classifier>less</classifier>
											<type>zip</type>
											<overWrite>true</overWrite>
											<destFileName>bonita-portal-theme.zip</destFileName>
										</artifactItem>
										<artifactItem>
											<groupId>org.bonitasoft.web.toolkit</groupId>
											<artifactId>toolkit-looknfeel</artifactId>
											<version>${project.version}</version>
											<classifier>css</classifier>
											<type>zip</type>
											<overWrite>true</overWrite>
											<destFileName>bonita-portal-theme-css.zip</destFileName>
										</artifactItem>
									</artifactItems>
									 <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF/classes</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<!-- configure the GWT-Maven plugin -->
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>gwt-maven-plugin</artifactId>
						<configuration>
							<style>DETAILED</style>
							<draftCompile>true</draftCompile>
							<enableAssertions>true</enableAssertions>
							<extraParam>-deploy=${project.build.directory}</extraParam>
							<module>org.bonitasoft.console.LightBonitaConsole</module>
							<!-- configuration for gwt:run and gwt:debug -->
							<systemProperties>
								<bonita.home>${bonita.home}</bonita.home>
								<build.compiler>org.bonitasoft.tools.gwt.JDTCompiler</build.compiler>
								<java.compiler>NONE</java.compiler>
							</systemProperties>
							<server>org.bonitasoft.tools.gwt.jetty.BonitaJettyLauncher</server>
							<extraJvmArgs>-XX:MaxPermSize=256m -Xms256m -Xmx512m</extraJvmArgs>
							<runTarget>login.jsp?redirectUrl=portal%2Fhomepage%3Fgwt.codesvr%3D127.0.0.1%3A9997</runTarget>
							<deploy>${project.build.directory}</deploy>
						</configuration>
					</plugin>
					<!-- add extra projects sources -->
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>add-source</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>add-source</goal>
								</goals>
								<configuration>
									<sources>
										<source>../../toolkit/toolkit-view/src/main/java</source>
										<source>../../toolkit/toolkit-view/src/main/resources</source>
									</sources>
								</configuration>
							</execution>
						</executions>
					</plugin>

				</plugins>
			</build>
		</profile>
		<!-- default CSS -->
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<bonita.css>portal/css/bonita.css</bonita.css>
			</properties>
		</profile>
		<!-- WRO CSS MANAGEMENT -->
		<profile>
			<id>css</id>
			<properties>
				<bonita.css>http://127.0.0.1:8081/bonita.css</bonita.css>
			</properties>
		</profile>
	</profiles>
</project>
